--- a/index.html
+++ b/index.html
@@ -6,16 +6,58 @@
     <title>ChatGPT Clone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!--Chat container-->
     <div class="chat-container">
-        <div class="chat-outgoing">
+        <div class="chat outgoing">
             <div class="chat-content">
                 <div class="chat-details">
-                    <img src="" alt="">
+                    <img src="images/user.jpg" alt="user-img">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </div>
             </div>
         </div>
+
+        <div class="chat incoming">
+            <div class="chat-content">
+                <div class="chat-details">
+                    <img src="images/chatbot.jpg" alt="chatbot-img">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
+            </div>
+        </div>
+
+        <div class="chat incoming">
+            <div class="chat-content">
+                <div class="chat-details">
+                    <img src="images/chatbot.jpg" alt="chatbot-img">
+                    <div class="typing-animation">
+                        <div class="typing-dot" style="--delay: 0.2s"></div>
+                        <div class="typing-dot" style="--delay: 0.3s"></div>
+                        <div class="typing-dot" style="--delay: 0.4s"></div>
+                    </div>
+                </div>
+                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
+            </div>
+        </div>
     </div>
+
+    <!--Typing container-->
+    <div class="typing-container">
+        <div class="typing-content">
+            <div class="typing-textarea">
+                <textarea id="chat-input" placeholder="Enter a prompt here" required></textarea>
+                <span id="send-btn" class="material-simbols-rounded"><i class="fa-solid fa-arrow-up"></i></span>
+            </div>
+            <div class="typing-controls">
+                <span id="theme-btn" class="material-simbols-rounded"><i class="fa-regular fa-lightbulb"></i></span>
+                <span id="delete-btn" class="material-simbols-rounded"><i class="fa-solid fa-trash"></i></span>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
