--- a/index.html
+++ b/index.html
@@ -11,93 +11,7 @@
 </head>
 <body>
     <!--Chat container-->
-    <div class="chat-container">
-        <div class="chat outgoing">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/user.jpg" alt="user-img">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="chat incoming">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/chatbot.jpg" alt="chatbot-img">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                </div>
-                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
-            </div>
-        </div>
-
-        <div class="chat incoming">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/chatbot.jpg" alt="chatbot-img">
-                    <div class="typing-animation">
-                        <div class="typing-dot" style="--delay: 0.2s"></div>
-                        <div class="typing-dot" style="--delay: 0.3s"></div>
-                        <div class="typing-dot" style="--delay: 0.4s"></div>
-                    </div>
-                </div>
-                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
-            </div>
-        </div>
-
-        <div class="chat outgoing">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/user.jpg" alt="user-img">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad porro dolore, soluta quasi, harum aspernatur incidunt alias recusandae ipsam sapiente amet? Nemo accusamus asperiores ipsum illo voluptates ratione debitis modi adipisci dicta? Sunt, iste! Labore perferendis voluptatibus dolor ratione ab!</p>
-                </div>
-            </div>
-        </div>
-        <div class="chat incoming">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/chatbot.jpg" alt="chatbot-img">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic molestias unde natus obcaecati. Temporibus incidunt tenetur adipisci culpa nihil quos perspiciatis, iusto ipsa. Eos minima ab porro, illum at nesciunt mollitia adipisci! Qui molestias accusamus amet! Pariatur amet reiciendis ullam.</p>
-                </div>
-                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
-            </div>
-        </div>
-        <div class="chat outgoing">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/user.jpg" alt="user-img">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad porro dolore, soluta quasi, harum aspernatur incidunt alias recusandae ipsam sapiente amet? Nemo accusamus asperiores ipsum illo voluptates ratione debitis modi adipisci dicta? Sunt, iste! Labore perferendis voluptatibus dolor ratione ab!</p>
-                </div>
-            </div>
-        </div>
-        <div class="chat incoming">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/chatbot.jpg" alt="chatbot-img">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic molestias unde natus obcaecati. Temporibus incidunt tenetur adipisci culpa nihil quos perspiciatis, iusto ipsa. Eos minima ab porro, illum at nesciunt mollitia adipisci! Qui molestias accusamus amet! Pariatur amet reiciendis ullam.</p>
-                </div>
-                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
-            </div>
-        </div>
-        <div class="chat outgoing">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/user.jpg" alt="user-img">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad porro dolore, soluta quasi, harum aspernatur incidunt alias recusandae ipsam sapiente amet? Nemo accusamus asperiores ipsum illo voluptates ratione debitis modi adipisci dicta? Sunt, iste! Labore perferendis voluptatibus dolor ratione ab!</p>
-                </div>
-            </div>
-        </div>
-        <div class="chat incoming">
-            <div class="chat-content">
-                <div class="chat-details">
-                    <img src="images/chatbot.jpg" alt="chatbot-img">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic molestias unde natus obcaecati. Temporibus incidunt tenetur adipisci culpa nihil quos perspiciatis, iusto ipsa. Eos minima ab porro, illum at nesciunt mollitia adipisci! Qui molestias accusamus amet! Pariatur amet reiciendis ullam.</p>
-                </div>
-                <span class="material-simbols-rounded"><i class="fa-regular fa-copy"></i></span>
-            </div>
-        </div>
-
-
-    </div>
+    <div class="chat-container"></div>
 
     <!--Typing container-->
     <div class="typing-container">
